# Qt5Example

./: readme.md
Debug/: CMakeLists.txt  LogColorForConcole.h  LogManager.cpp  LogManager.h  main.cpp  readme.md
FutureWatcherProgressBar/: CMakeLists.txt  FutureWatcher.cpp  MyClass.h  form.cpp  form.h  readme.txt
FutureWatcherProgressDialog/: CMakeLists.txt  MyClass.h  form.cpp  form.h  readme.txt
